--- a/rikitik_controller/rikitik_controller.ioc
+++ b/rikitik_controller/rikitik_controller.ioc
@@ -28,42 +28,45 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PB0
-Mcu.Pin13=PB1
-Mcu.Pin14=PB10
-Mcu.Pin15=PB11
-Mcu.Pin16=PB12
-Mcu.Pin17=PB13
-Mcu.Pin18=PB14
-Mcu.Pin19=PB15
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PB0
+Mcu.Pin14=PB1
+Mcu.Pin15=PB10
+Mcu.Pin16=PB11
+Mcu.Pin17=PB12
+Mcu.Pin18=PB13
+Mcu.Pin19=PB14
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA8
-Mcu.Pin21=PA9
-Mcu.Pin22=PA10
-Mcu.Pin23=PA11
-Mcu.Pin24=PA12
-Mcu.Pin25=PA13
-Mcu.Pin26=PA14
-Mcu.Pin27=PA15
-Mcu.Pin28=PB3
-Mcu.Pin29=PB4
+Mcu.Pin20=PB15
+Mcu.Pin21=PA8
+Mcu.Pin22=PA9
+Mcu.Pin23=PA10
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PA15
+Mcu.Pin29=PB3
 Mcu.Pin3=PD0-OSC_IN
-Mcu.Pin30=PB5
-Mcu.Pin31=PB6
-Mcu.Pin32=PB7
-Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin34=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM1_VS_no_output1
-Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
+Mcu.Pin30=PB4
+Mcu.Pin31=PB5
+Mcu.Pin32=PB6
+Mcu.Pin33=PB7
+Mcu.Pin34=PB8
+Mcu.Pin35=PB9
+Mcu.Pin36=VP_SYS_VS_Systick
+Mcu.Pin37=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM1_VS_no_output1
+Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin4=PD1-OSC_OUT
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA4
-Mcu.Pin9=PA5
-Mcu.PinsNb=37
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -84,6 +87,10 @@ NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_HP_CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIO_Label=LED6
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPIO_Output
 PA1.Signal=ADCx_IN1
 PA10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA10.GPIO_Label=BTN7
@@ -104,17 +111,17 @@ PA2.Signal=ADCx_IN2
 PA3.Signal=ADCx_IN3
 PA4.Signal=ADCx_IN4
 PA5.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA5.GPIO_Label=BTN14
+PA5.GPIO_Label=BTN12
 PA5.GPIO_PuPd=GPIO_PULLUP
 PA5.Locked=true
 PA5.Signal=GPIO_Input
 PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA6.GPIO_Label=BTN15
+PA6.GPIO_Label=BTN13
 PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
 PA6.Signal=GPIO_Input
 PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA7.GPIO_Label=BTN16
+PA7.GPIO_Label=BTN14
 PA7.GPIO_PuPd=GPIO_PULLUP
 PA7.Locked=true
 PA7.Signal=GPIO_Input
@@ -128,20 +135,22 @@ PA9.GPIO_Label=BTN6
 PA9.GPIO_PuPd=GPIO_PULLUP
 PA9.Locked=true
 PA9.Signal=GPIO_Input
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=LED0
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB0.GPIO_Label=BTN15
+PB0.GPIO_PuPd=GPIO_PULLUP
 PB0.Locked=true
-PB0.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=LED1
+PB0.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB1.GPIO_Label=BTN16
+PB1.GPIO_PuPd=GPIO_PULLUP
 PB1.Locked=true
-PB1.Signal=GPIO_Output
+PB1.Signal=GPIO_Input
 PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=LED2
+PB10.GPIO_Label=LED7
 PB10.Locked=true
 PB10.Signal=GPIO_Output
 PB11.GPIOParameters=GPIO_Label
-PB11.GPIO_Label=LED3
+PB11.GPIO_Label=LED8
 PB11.Locked=true
 PB11.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -186,20 +195,26 @@ PB7.GPIO_Label=BTN11
 PB7.GPIO_PuPd=GPIO_PULLUP
 PB7.Locked=true
 PB7.Signal=GPIO_Input
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=LED1
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=LED2
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
-PC13-TAMPER-RTC.GPIO_Label=DEBUG_LED
+PC13-TAMPER-RTC.GPIO_Label=LED3
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
-PC14-OSC32_IN.GPIOParameters=GPIO_PuPd,GPIO_Label
-PC14-OSC32_IN.GPIO_Label=BTN12
-PC14-OSC32_IN.GPIO_PuPd=GPIO_PULLUP
+PC14-OSC32_IN.GPIOParameters=GPIO_Label
+PC14-OSC32_IN.GPIO_Label=LED4
 PC14-OSC32_IN.Locked=true
-PC14-OSC32_IN.Signal=GPIO_Input
-PC15-OSC32_OUT.GPIOParameters=GPIO_PuPd,GPIO_Label
-PC15-OSC32_OUT.GPIO_Label=BTN13
-PC15-OSC32_OUT.GPIO_PuPd=GPIO_PULLUP
+PC14-OSC32_IN.Signal=GPIO_Output
+PC15-OSC32_OUT.GPIOParameters=GPIO_Label
+PC15-OSC32_OUT.GPIO_Label=LED5
 PC15-OSC32_OUT.Locked=true
-PC15-OSC32_OUT.Signal=GPIO_Input
+PC15-OSC32_OUT.Signal=GPIO_Output
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -276,7 +291,7 @@ USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STR
 USB_DEVICE.MANUFACTURER_STRING=Rikitik
 USB_DEVICE.PRODUCT_STRING_CUSTOMHID_FS=Rikitik Controller
 USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=4
-USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=68
+USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=62
 USB_DEVICE.USBD_MAX_NUM_CONFIGURATION=1
 USB_DEVICE.USBD_MAX_NUM_INTERFACES=1
 USB_DEVICE.VID=3996
